--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/vchenpeng/markdown-preview#readme",
   "dependencies": {
     "express": "^4.15.2",
-    "formidable": "^1.1.1"
+    "formidable": "^1.1.1",
+    "node-uuid": "^1.4.8"
   },
   "devDependencies": {
 	
