--- a/web.config
+++ b/web.config
@@ -31,4 +31,7 @@
       </rules>
     </rewrite>
   </system.webServer>
+    <system.web>
+        <globalization fileEncoding="utf-8" />
+    </system.web>
 </configuration>
