--- a/web.config
+++ b/web.config
@@ -30,6 +30,7 @@
         </rule>
       </rules>
     </rewrite>
+    <iisnode devErrorsEnabled="false" />
   </system.webServer>
     <system.web>
         <globalization fileEncoding="utf-8" />
