--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-		
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vchenpeng/markdown-preview.git"
@@ -19,11 +17,10 @@
   "dependencies": {
     "express": "^4.15.2",
     "formidable": "^1.1.1",
+    "mongoose": "^4.9.10",
     "node-uuid": "^1.4.8"
   },
-  "devDependencies": {
-	
-  },
+  "devDependencies": {},
   "engines": {
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
